# starting-ragchatbot-codebase

./: CLAUDE.md  README.md  backend-tool-refactor.md  frontend-changes  pyproject.toml  test_outline_tool.py
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  config.py  error_handlers.py  logger.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: conftest.py  demo_sequential_tools.py  test_ai_generator.py  test_ai_generator_simple.py  test_api.py  test_integration.py
frontend/: index.html  script.js  style.css
